@@ -13,7 +13,7 @@ import lombok.extern.slf4j.Slf4j;
 import java.io.File;
 import java.io.IOException;
 import java.io.InputStream;
-import java.net.URL;
+import java.net.URI;
 
 /**
  * 腾讯云COS对象存储服务工具类
@@ -154,7 +154,7 @@ public class TencentCos {
         String folder = "wechat/images/";
         InputStream inputStream = null;
         try {
-            inputStream = new URL(url).openStream();
+            inputStream = URI.create(url).toURL().openStream();
         } catch (IOException e) {
             log.error("Unhandled exception", e);
         }
@@ -177,7 +177,7 @@ public class TencentCos {
         String folder = "wechat/avatars/";
         InputStream inputStream = null;
         try {
-            inputStream = new URL(url).openStream();
+            inputStream = URI.create(url).toURL().openStream();
         } catch (IOException e) {
             log.error("Unhandled exception", e);
         }
@@ -198,7 +198,7 @@ public class TencentCos {
         String folder = "wechat/voices/";
         InputStream inputStream = null;
         try {
-            inputStream = new URL(url).openStream();
+            inputStream = URI.create(url).toURL().openStream();
         } catch (IOException e) {
             log.error("Unhandled exception", e);
         }
@@ -219,7 +219,7 @@ public class TencentCos {
         String folder = "wechat/videos/";
         InputStream inputStream = null;
         try {
-            inputStream = new URL(url).openStream();
+            inputStream = URI.create(url).toURL().openStream();
         } catch (IOException e) {
             log.error("Unhandled exception", e);
         }
@@ -240,7 +240,7 @@ public class TencentCos {
         String folder = "wechat/thumbs/";
         InputStream inputStream = null;
         try {
-            inputStream = new URL(url).openStream();
+            inputStream = URI.create(url).toURL().openStream();
         } catch (IOException e) {
             log.error("Unhandled exception", e);
         }
@@ -254,7 +254,7 @@ public class TencentCos {
         String folder = "wechat/files/";
         InputStream inputStream = null;
         try {
-            inputStream = new URL(url).openStream();
+            inputStream = URI.create(url).toURL().openStream();
         } catch (IOException e) {
             log.error("Unhandled exception", e);
         }
@@ -291,7 +291,7 @@ public class TencentCos {
         String folder = "school/logo/";
         InputStream inputStream = null;
         try {
-            inputStream = new URL(url).openStream();
+            inputStream = URI.create(url).toURL().openStream();
         } catch (IOException e) {
             log.error("Unhandled exception", e);
         }
@@ -305,7 +305,7 @@ public class TencentCos {
         String folder = "course/logo/";
         InputStream inputStream = null;
         try {
-            inputStream = new URL(url).openStream();
+            inputStream = URI.create(url).toURL().openStream();
         } catch (IOException e) {
             log.error("Unhandled exception", e);
         }
